...
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout10">

        <LinearLayout
...

                <ImageButton
                    android:id="@+id/p1RedBtn"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
...

                <ImageButton
                    android:id="@+id/p1BlueBtn"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
...

                <ImageButton
                    android:id="@+id/p1GreenBtn"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
...

                <ImageButton
                    android:id="@+id/p1LightBlueBtn"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
...

                <ImageButton
                    android:id="@+id/p1PurpleBtn"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
...

                <ImageButton
                    android:id="@+id/p1OrangeBtn"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
...

                <ImageButton
                    android:id="@+id/p1BrownBtn"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
...

                <ImageButton
                    android:id="@+id/p2RedBtn"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
...

                <ImageButton
                    android:id="@+id/p2BlueBtn"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
...

                <ImageButton
                    android:id="@+id/p2GreenBtn"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
...

                <ImageButton
                    android:id="@+id/p2LightBlueBtn"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
...

                <ImageButton
                    android:id="@+id/p2PurpleBtn"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
...

                <ImageButton
                    android:id="@+id/p2OrangeBtn"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
...

                <ImageButton
                    android:id="@+id/p2BrownBtn"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
...

                    <RadioButton
                        android:id="@+id/radiobtn4x4"
                        android:layout_width="125dp"
                        android:layout_height="48dp"
...

                    <RadioButton
                        android:id="@+id/radiobtn5x5"
                        android:layout_width="125dp"
                        android:layout_height="48dp"
...

                    <RadioButton
                        android:id="@+id/radiobtn6x6"
                        android:layout_width="125dp"
                        android:layout_height="48dp"
...

                    <RadioButton
                        android:id="@+id/song1"
                        android:layout_width="125dp"
                        android:layout_height="48dp"
...
                        android:button="@null"
                        android:fontFamily="@font/syncopate_bold"
                        android:text="Piano"
                        android:textAlignment="center"
                        android:textColor="#FFFFFF"
...

                    <RadioButton
                        android:id="@+id/song2"
                        android:layout_width="125dp"
                        android:layout_height="48dp"
...
                        android:button="@null"
                        android:fontFamily="@font/syncopate_bold"
                        android:text="Polka"
                        android:textAlignment="center"
                        android:textColor="#FFFFFF"
...

                    <RadioButton
                        android:id="@+id/song3"
                        android:layout_width="125dp"
                        android:layout_height="48dp"
...
                        android:button="@null"
                        android:fontFamily="@font/syncopate_bold"
                        android:text="Techno"
                        android:textAlignment="center"
                        android:textColor="#FFFFFF"
...

                <EditText
                    android:id="@+id/player1Name"
                    android:layout_width="173dp"
                    android:layout_height="wrap_content"
...

                <EditText
                    android:id="@+id/player2Name"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
...

            <Button
                android:id="@+id/confirm"
                android:layout_width="398dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/holo_purple"
                android:fontFamily="@font/syncopate_bold"
                android:text="Confirm"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
...
