...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:srcCompat="@drawable/vcu" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/Vcu"
        app:layout_constraintEnd_toEndOf="parent"
...
            <androidx.legacy.widget.Space
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <ImageButton
                android:id="@+id/settingsBtn"
                android:layout_width="102dp"
                android:layout_height="match_parent"
                android:background="@drawable/settingscreenbutton" />
        </LinearLayout>

        <androidx.legacy.widget.Space
...
